Ajout bouton d'enregistrement au milieu de l'application Le bouton enregistre un son et le met dans les storage du telephone sous le dossier "Whisper"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Profil</string>
     <string name="title_dashboard">Whispers</string>
     <string name="title_notifications">Notifications</string>
+    <string name="rec_button">REC</string>
 </resources>
