--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_dashboard">Whispers</string>
     <string name="title_notifications">Notifications</string>
     <string name="rec_button">REC</string>
+    <string name="upload">Upload</string>
 </resources>
